--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+/* secciones generales */
 body {
   font-family: Arial, sans-serif;
   margin: 0;
@@ -6,36 +7,80 @@ body {
 }
 
 header {
+  position: fixed;
+  width: 100%;
   background-color: #333;
   color: white;
-  padding: 10px 20px;
+  padding: 10px 10px;
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  box-sizing: border-box;
+  z-index: 1;
 }
 
-.desktop-menu {
+main {
+  padding: 0% 10%;
+  padding-top: 100px;
+}
+
+section {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
+  padding: 3% 0%;
+  max-width: 1024px;
+  margin: auto;
 }
 
-.desktop-menu a {
-  color: white;
-  font-size: larger;
-  margin: 0 10px;
+.servicios-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+  gap: 20px;
 }
+
+footer {
+  padding: 30px 10% 10px;
+  text-align: center;
+}
+
+/* menu mobile */
 
 nav {
-  display: none;
   position: fixed;
   top: 0;
   right: 0;
+  width: 100%;
   height: auto;
-  transition: right 1s; /* Transición suave de 0.5 segundos */
+  background-color: #f0f0f0;
+  transform: translateY(-100%);
+  transition: transform 0.5s ease-in-out;
   z-index: 1000;
 }
 
+nav.active {
+  transform: translateY(0);
+}
+
+.mobile-menu-links {
+  display: flex;
+  flex-direction: column;
+  background-color: #333;
+  padding: 10px 0px;
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.5s ease-in-out;
+}
+
+.mobile-menu.active .mobile-menu-links {
+  max-height: 400px;
+}
+
+.mobile-menu-links a {
+  color: white;
+  text-decoration: none;
+}
+
 nav a {
-  display: block;
   padding: 10px 10px;
   color: #333;
   text-decoration: none;
@@ -46,53 +91,35 @@ nav a:hover {
   background-color: #ccc;
 }
 
-.open-menu-btn {
-  display: none;
-}
-
-main {
-  padding: 0% 10%;
-}
-section {
-  display: flex;
-  flex-direction: column;
-}
-
-footer {
-  padding: 30px 10% 10px;
-  text-align: center;
-}
-
-.mobile-menu {
-  display: none;
-  position: fixed;
-  top: 0;
-  right: 0;
-  width: 100%;
-  background-color: #f0f0f0;
-  transition: transform 0.5s;
-  transform: translateY(-100%);
-  z-index: 1000;
-}
-
-.mobile-menu.active {
-  transform: translateY(0);
-}
-
-/* Estilos para dispositivos de escritorio exclusivamente*/
-@media (min-width: 768px) {
-  .desktop-menu {
-    display: block;
-  }
+/* Estilos para dispositivos de escritorio */
+@media screen and (min-width: 1201px) {
   #contactForm {
-    padding: 0% 10%;
+    padding: 0% 20%;
+  }
+}
+
+/* Estilos para dispositivos de tablet */
+@media screen and (min-width: 601px) {
+  /* menu desktop */
+  .desktop-menu {
+    display: flex;
+    flex-direction: row;
+  }
+  .desktop-menu a {
+    color: white;
+    font-size: larger;
+    margin: 0 10px;
+  }
+
+  .open-menu-btn {
+    display: none;
   }
 }
 
 /* Estilos para dispositivos móviles exclusivamente */
-@media (max-width: 767px) {
-  .desktop-menu {
-    display: none;
+@media screen and (max-width: 600px) {
+  .servicios-grid {
+    grid-template-columns: 1fr;
   }
 
   .mobile-menu.active {
@@ -103,19 +130,12 @@ footer {
     display: flex;
     flex-direction: column;
     background-color: #333;
-    padding: 10px 0px;
-    overflow: hidden; /* Ocultar el contenido que excede la altura máxima */
-    transition: max-height 1s ease; /* Transición suave de la altura */
-  }
-
-  .mobile-menu.active .mobile-menu-links {
-    max-height: 300px; /* Altura máxima para mostrar los enlaces */
+    overflow: hidden;
   }
 
   .mobile-menu-links a {
     color: white;
     text-decoration: none;
-    margin-bottom: 10px;
   }
 
   .open-menu-btn {
@@ -129,5 +149,9 @@ footer {
     background-color: #f0f0f0;
     padding: 5px 10px;
     border-radius: 5px;
+  }
+
+  .desktop-menu {
+    display: none;
   }
 }
